cmake_minimum_required(VERSION 3.8)
project(wibus)
find_package (PkgConfig REQUIRED)
pkg_check_modules (GTK3 REQUIRED gtk+-3.0)
set(CMAKE_C_STANDARD 11)
include_directories (SYSTEM ${GTK3_INCLUDE_DIRS})
message(STATUS "GTK3_INCLUDE_DIRS: ${GTK3_INCLUDE_DIRS}")
link_directories (SYSTEM ${GTK3_LIBRARY_DIRS})
set(SOURCE_FILES src/main.c)
add_executable(wibus ${SOURCE_FILES})
add_definitions (${GTK3_CFLAGS_OTHER})
target_link_libraries (wibus ${GTK3_LIBRARIES})
